--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <ul class="list-todo"></ul>
     <span class="span-weather"></span>
 
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
-    <script src="background.js"></script>
-    <script src="weather.js"></script>
+    <script type="module" src="clock.js"></script>
+    <script type="module" src="greeting.js"></script>
+    <script type="module" src="todo.js"></script>
+    <script type="module" src="background.js"></script>
+    <script type="module" src="weather.js"></script>
 </body>
 </html>
