--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>졸업 작품</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <form class="form-clock">
