--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                placeholder="Write a to do" />
     </form>
     <ul class="list-todo"></ul>
-    <span class="span-weather"></span>
+    <h3 class="span-weather"></h3>
 
     <script type="module" src="clock.js"></script>
     <script type="module" src="greeting.js"></script>
